white spacing fix

--- a/projects/mainProject/dev/allstyles.css
+++ b/projects/mainProject/dev/allstyles.css
@@ -380,8 +380,13 @@ p {
 	padding: 0 !important;
 	font-family: 'Open sans';
 }
+.features>table{
+	background-color: #f4f4f4;
+}
 
-
+.features .column{
+	background: #f4f4f4;
+}
 .features .column>table {
 	border: 10px solid #f4f4f4!important;
 	background: #ffffff;
